--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -17,11 +17,14 @@ server {
         proxy_set_header Host $host;
 
         proxy_cache NginxCache;
-        proxy_cache_min_uses 5;
+        proxy_cache_min_uses 2;
         
         proxy_cache_methods GET;
         proxy_cache_valid 200 10m;
         proxy_cache_valid 404 5m;
+
+        proxy_ignore_headers Vary;
+        proxy_cache_bypass $cookie_sessionid;
 
         add_header X-Proxy-Cache $upstream_cache_status;
 
