add rate limiting for nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,15 @@ services:
     expose:
       - 8000
   
-  webv2:
-    build: 
-      context: ./djangoV2/
-    command: gunicorn demo.wsgi:application --bind 0.0.0.0:8080
-    volumes:
-      - ./djangoV2/:/usr/src/app/
-      - static_files:/usr/src/app/staticfiles
-    expose:
-      - 8080
+  # webv2:
+  #   build: 
+  #     context: ./djangoV2/
+  #   command: gunicorn demo.wsgi:application --bind 0.0.0.0:8080
+  #   volumes:
+  #     - ./djangoV2/:/usr/src/app/
+  #     - static_files:/usr/src/app/staticfiles
+  #   expose:
+  #     - 8080
 
 
   nginx:
