--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -4,28 +4,34 @@
 #                     inactive=60m
 #                     levels=1:2;
 
+
+## Rate Limiting
+limit_req_zone $binary_remote_addr zone=limitbyaddr:10m rate=1r/s;
+
 upstream demoV1 {
     server webv1:8000;
 }
 
 
-upstream demoV2 {
-    server webv2:8080;
-}
+# upstream demoV2 {
+#     server webv2:8080;
+# }
 
-split_clients "${arg_token}" $variant {
-    50% demoV1;
-    *   demoV2;
-}
+# split_clients "${arg_token}" $variant {
+#     50% demoV1;
+#     *   demoV2;
+# }
 
 
 server {
     listen 80;
 
-    location / {
-        proxy_pass http://$variant;
+    location /split_test/ {
+        proxy_pass http://demoV1;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+
+        limit_req zone=limitbyaddr;
 
         # proxy_cache NginxCache;
         # proxy_cache_min_uses 2;
